@@ -13,6 +13,10 @@ Sat Apr  2 18:09:30 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
 	  specified libs are used.  Pkg-config is not yet supported.
 	  Affected file configure.in.pre.
 
+	* Fixed WATCH command handling on backup router.  Router does not
+	  send the watch command any more to backup if it originates from
+	  backup.  Affected file silcd/command.c.
+
 Fri Apr  1 18:52:47 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
 
 	* Changed announcing to not announce unregistered clients.
